A bunch of dead arithmetic code added before I finally got around to implementing crappy triangle drawing.

--- a/n22d.html
+++ b/n22d.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="blah.js"></script>
+    <script src="n22d.js"></script>
 </head>
 <body onload="go()">
     <canvas id="c" width="200" height="200" />
