--- a/n22d.html
+++ b/n22d.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <script src="math.js"></script>
+    <script src="draw.js"></script>
     <script src="n22d.js"></script>
 </head>
 <body onload="go()">
