--- a/n22d.html
+++ b/n22d.html
@@ -1,10 +1,12 @@
 <html>
 <head>
+    <script src="http://code.jquery.com/jquery-1.6.4.js"></script>
     <script src="math.js"></script>
+    <script src="physics.js"></script>
     <script src="draw.js"></script>
     <script src="n22d.js"></script>
 </head>
-<body onload="go()">
+<body>
     <canvas id="c" width="200" height="200" />
 </body>
 </html>
