--- a/n22d.html
+++ b/n22d.html
@@ -1,12 +1,38 @@
 <html>
 <head>
-    <script src="http://code.jquery.com/jquery-1.6.4.js"></script>
+    <script src="CanvasMatrix.js" type="text/javascript"></script>
     <script src="math.js"></script>
     <script src="physics.js"></script>
     <script src="draw.js"></script>
     <script src="n22d.js"></script>
 </head>
-<body>
-    <canvas id="c" width="200" height="200" />
+
+<script id="shader-vs" type="x-shader/x-vertex"> 
+attribute vec3 aPos;
+attribute float diffuse;
+uniform mat4 prMatrix;
+varying vec4 color;
+const vec3 dirDif = vec3(0., 0., 1.);
+void main(void) {
+    gl_Position = prMatrix * vec4(aPos, 1.);
+    color = vec4(.9*diffuse, .5*diffuse, 0., 1.);
+}
+</script> 
+ 
+<script id="shader-fs" type="x-shader/x-fragment"> 
+#ifdef GL_ES
+precision highp float;
+#endif
+varying vec4 color;
+
+void main(void) {
+    gl_FragColor = color;
+}
+</script> 
+ 
+</head>
+<body onload="webGLStart();" onresize="canvas.resize();"> 
+   <canvas id="canvas" width="500" height="500"></canvas> 
 </body>
+
 </html>
