--- a/n22d.html
+++ b/n22d.html
@@ -10,11 +10,11 @@
 
 <script id="shader-vs" type="x-shader/x-vertex"> 
 uniform mat4 prMatrix;
-attribute vec3 aPos;
+attribute vec3 vPos;
 attribute vec3 vColour;
 varying vec4 fColour;
 void main(void) {
-    gl_Position = prMatrix * vec4(aPos, 1.);
+    gl_Position = prMatrix * vec4(vPos, 1.);
     fColour = vec4(vColour, 1.);
 }
 </script> 
@@ -31,7 +31,7 @@ void main(void) {
 </script> 
  
 </head>
-<body onload="webGLStart();" onresize="canvas.resize();"> 
+<body onload="main();"> 
    <canvas id="canvas" width="500" height="500"></canvas> 
 </body>
 
