--- a/n22d.html
+++ b/n22d.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="CanvasMatrix.js"></script>
-    <script src="http://documentcloud.github.com/underscore/underscore.js"></script>
+    <script src="underscore.js"></script>
     <script src="math.js"></script>
     <script src="physics.js"></script>
     <script src="draw.js"></script>
@@ -17,7 +17,7 @@ void main(void) {
     gl_Position = prMatrix * vec4(vPos, 1.);
     fColour = vec4(vColour, 1.);
 }
-</script> 
+</script>
  
 <script id="shader-fs" type="x-shader/x-fragment"> 
 #ifdef GL_ES
@@ -28,7 +28,7 @@ varying vec4 fColour;
 void main(void) {
     gl_FragColor = fColour;
 }
-</script> 
+</script>
  
 </head>
 <body onload="main();"> 
