--- a/index.html
+++ b/index.html
@@ -1,60 +1,70 @@
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang='en'>
 <head>
-    <script src="jquery-1.6.4.js"></script>
-    <script src="underscore.js"></script>
-    <script src="math_linear.js"></script>
-    <script src="shapes.js"></script>
-    <script src="n22d.js"></script>
-</head>
+<title>Spinning Klein Bottle</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<script src="jquery-1.6.4.js"></script>
+<script src="underscore.js"></script>
+
+<script src="util.js"></script>
+<script src="math_linear.js"></script>
+<script src="shapes.js"></script>
+<script src="n22d.js"></script>
+
+<style type="text/css">
+    html, body {
+        height: 100%;
+    }
+</style>
 
 <script id="shader-vs" type="x-shader/x-vertex">
-uniform mat4 prMatrix;
-attribute vec3 vPos;
-attribute vec3 vColour;
-varying vec4 fColour;
-void main(void) {
-    gl_Position = prMatrix * vec4(vPos, 1.);
-    fColour = vec4(vColour, 1.);
-}
+    uniform mat4 prMatrix;
+    attribute vec3 vPos;
+    attribute vec3 vColour;
+    varying vec4 fColour;
+    void main(void) {
+        gl_Position = prMatrix * vec4(vPos, 1.);
+        fColour = vec4(vColour, 1.);
+    }
 </script>
  
 <script id="shader-fs" type="x-shader/x-fragment">
-#ifdef GL_ES
-precision highp float;
-#endif
-varying vec4 fColour;
+    #ifdef GL_ES
+    precision highp float;
+    #endif
+    varying vec4 fColour;
 
-void main(void) {
-    gl_FragColor = fColour;
-}
+    void main(void) {
+        gl_FragColor = fColour;
+    }
 </script>
 
 <script type="text/javascript">
-var n22d, model;
+    var n22d, model; // for debugging
 
-function main() {
-    var m = model = new Model(klein_bottle(20, 60));
-    var x_rot = new Rotation(1, 3, Math.PI/2);
-    var y_rot = new Rotation(2, 3);
-    var auto_rot = new Rotation(3, 4);
-    auto_rot.velocity = Math.PI/2;
-    var position = new Position(new Vector([0, 0, 0, -10]));
-    m.transform_stack = [position, auto_rot, y_rot, x_rot];
+    // like in middle school except with fewer edges and no kissing
+    function spinning_bottle() {
+        var m = new Model(klein_bottle(20, 60));
+        var x_rot = new Rotation(1, 3, Math.PI/2);
+        var y_rot = new Rotation(2, 3);
+        var auto_rot = new Rotation(3, 4);
+        auto_rot.velocity = Math.PI/8;
+        var position = new Position(new Vector([0, 0, 0, -8]));
+        m.transform_stack = [position, auto_rot, y_rot, x_rot];
+        return m;
+    }
 
-    n22d = new N22d(document.getElementById("canvas"), [m]);
-    n22d.animate();
-}
+    $(document).ready(function() {
+        model = spinning_bottle();
+        n22d = new N22d($('#n22d'), [model]);
+        n22d.animate();
+    });
 </script>
- 
 </head>
-<body onload="main();">
-    <div>
-        <canvas id='canvas' style='position:absolute; z-index:1' width=500 height=500></canvas>
-        <div style='position:absolute; z-index:2'>
-            <input id='ctrl' type='range' style='width: 10pt' min=0 max=0></input>
-            <span id='valu'>.</span>
-        </div>
-    </div>
+
+<body>
+    <div id='n22d' style='min-height: 100%;'></div>
 </body>
 
 </html>
