--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
     function spinning_bottle() {
         var m = new Model(klein_bottle(20, 60));
         var x_rot = new Rotation(1, 3, Math.PI/2);
-        var y_rot = new Rotation(2, 3);
-        var auto_rot = new Rotation(3, 4);
-        auto_rot.velocity = Math.PI/8;
         var position = new Position(new Vector([0, 0, 0, -8]));
-        m.transforms.a = [position, auto_rot, y_rot, x_rot];
+        m.transforms.a = [position, x_rot];
         return m;
     }
 
