--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Klein Bottle</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="style.css" rel="stylesheet" type="text/css">
-<script src="jquery-1.6.4.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="underscore.js"></script>
 
 <script src="util.js"></script>
