Rename this directory.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 
 <script src="prototype.js"></script>
-<script src="n22d/webgl-utils.js"></script>
-<script src="n22d/webgl-debug.js"></script>
+<script src="klein-bottle/webgl-utils.js"></script>
+<script src="klein-bottle/webgl-debug.js"></script>
 
-<script src="n22d/util.js"></script>
-<script src="n22d/math.js"></script>
-<script src="n22d/gl.js"></script>
-<script src="n22d/n22d.js"></script>
-<script src="n22d/422d.js"></script>
-<script src="n22d/ui.js"></script>
-<script src="n22d/shapes.js"></script>
-<script src="n22d/bottle-demo.js"></script>
+<script src="klein-bottle/util.js"></script>
+<script src="klein-bottle/math.js"></script>
+<script src="klein-bottle/gl.js"></script>
+<script src="klein-bottle/n22d.js"></script>
+<script src="klein-bottle/422d.js"></script>
+<script src="klein-bottle/ui.js"></script>
+<script src="klein-bottle/shapes.js"></script>
+<script src="klein-bottle/bottle-demo.js"></script>
 
 <script type="text/javascript">
     document.observe("dom:loaded", function() {
@@ -58,7 +58,7 @@
 
 <body>
     <a class="logo" href="http://tenfour.ag">tenfour</a>
-    <div class="title">Spin a Klein Bottle</div>
+    <div class="title"><a href="klein-bottle">Spin a Klein Bottle</a></div>
 </body>
 
 </html>
