--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang='en'>
 <head>
 <title>Spin a Klein Bottle</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name='viewport' content='width=device-width, initial-scale=1'>
 <link href="style.css" rel="stylesheet" type="text/css">
 
 <script src="prototype.js"></script>
