Move util.js up to parent dir.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="klein-bottle/webgl-utils.js"></script>
 <script src="klein-bottle/webgl-debug.js"></script>
 
-<script src="klein-bottle/util.js"></script>
+<script src="util.js"></script>
 <script src="klein-bottle/math.js"></script>
 <script src="klein-bottle/gl.js"></script>
 <script src="klein-bottle/422d.js"></script>
