Add link back to portfolio.

--- a/index.html
+++ b/index.html
@@ -30,17 +30,6 @@
         max-width:30em;
         text-align: justify;
     }
-    .logo {
-        display:block;
-        font-size:x-large;
-        color:#808080;
-        text-indent:2em;
-    }
-    .title {
-        display:block;
-        font-size:xx-large;
-        text-indent:0.5em;
-    }
     .error {
         font-size:xx-large;
         color:#FF0000;
@@ -51,8 +40,8 @@
 
 <body>
 <div class="body">
-<a class="logo" href="http://tenfour.ag">tenfour</a>
-<div class="title"><a href="klein-bottle">Klein Bottle</a></div>
+<h1><a href="klein-bottle">Klein Bottle</a></h1>
+<a href="/">Back to portfolio</a>
 
 <p>
 The <a href="http://en.wikipedia.org/wiki/Klein_bottle">Klein bottle</a>
