Change name back to n22d

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-<title>Klein Bottle</title>
+<title>Visualizing Nd Surfaces</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <link href="style.css" rel="stylesheet" type="text/css">
@@ -10,15 +10,15 @@
   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 <script src="prototype.js"></script>
-<script src="klein-bottle/webgl-utils.js"></script>
-<script src="klein-bottle/webgl-debug.js"></script>
+<script src="n22d/webgl-utils.js"></script>
+<script src="n22d/webgl-debug.js"></script>
 
 <script src="util.js"></script>
-<script src="klein-bottle/math.js"></script>
-<script src="klein-bottle/gl.js"></script>
-<script src="klein-bottle/422d.js"></script>
-<script src="klein-bottle/shapes.js"></script>
-<script src="klein-bottle/bottle-demo.js"></script>
+<script src="n22d/math.js"></script>
+<script src="n22d/gl.js"></script>
+<script src="n22d/422d.js"></script>
+<script src="n22d/shapes.js"></script>
+<script src="n22d/bottle-demo.js"></script>
 
 <script type="text/javascript">
     document.observe("dom:loaded", function() {
@@ -62,7 +62,7 @@
 
 <body>
 <div class="body">
-<h1><a href="klein-bottle">Visualizing \(n\)d Surfaces</a></h1>
+<h1><a href="n22d">Visualizing \(n\)d Surfaces</a></h1>
 
 <p class="shameless-plug">
 Adrian Bauer - <a href="/">hire Adrian as a consultant</a><br />
@@ -95,7 +95,7 @@ I wrote does exactly this.
 
 <div class="img">
 <a href="http://en.wikipedia.org/wiki/File:M%C3%B6bius_strip.jpg">
-<img src="klein-bottle/mobius.jpg" alt="Möbius strip" />
+<img src="n22d/mobius.jpg" alt="Möbius strip" />
 </a>
 </div>
 
@@ -131,7 +131,7 @@ angle.
 
 <div class="img">
 <a href="http://en.wikipedia.org/wiki/File:Phong_components_version_4.png">
-<img src="klein-bottle/Phong_components_version_4.png" alt="Ambient, diffuse, and specular lighting" />
+<img src="n22d/Phong_components_version_4.png" alt="Ambient, diffuse, and specular lighting" />
 </a>
 </div>
 
