Be less obnoxious

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     h2 { text-align: left; }
     .shameless-plug {
         text-align: center;
-        font-size: x-large;
         margin: 1em;
     }
     .shameless-plug a {
@@ -73,12 +72,9 @@
 <h1><a href="n22d">Visualizing \(n\)d Surfaces</a></h1>
 
 <p>
-By <a href="mailto:ag@tenfour.ag">Adrian Bauer</a>, August 14, 2012
+By <a href="mailto:ag@tenfour.ag">Adrian Bauer</a>, August 14, 2012<br />
+<a href="/">Back to portfolio</a>
 </p>
-
-<div class="shameless-plug">
-<a href="/">Hire Adrian</a>
-</div>
 
 <p>
 Sane, sober humans don't generally claim to perceive more than three spatial
@@ -214,7 +210,7 @@ and <a href="mailto:ag@tenfour.ag">let me know</a> if you find it useful!
 </p>
 
 <div class="shameless-plug">
-<a href="/">Better yet, hire me</a>
+<a href="/">Better yet, hire me :)</a>
 </div>
 
 </body>
