--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Visualizing Nd Surfaces</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta property="fb:admins" content="717600634" />
 <link href="style.css" rel="stylesheet" type="text/css">
 
 <script type="text/javascript"
@@ -69,12 +70,51 @@
 </head>
 
 <body>
+
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '418713424833026', // App ID
+      channelUrl : '//tenfour.ag/channel.html', // Channel File
+      status     : true, // check login status
+      cookie     : true, // enable cookies to allow the server to access the session
+      xfbml      : true  // parse XFBML
+    });
+
+    // Additional initialization code here
+  };
+
+  // Load the SDK Asynchronously
+  (function(d){
+     var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement('script'); js.id = id; js.async = true;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     ref.parentNode.insertBefore(js, ref);
+   }(document));
+</script>
+
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
 <h1><a href="n22d">Visualizing \(n\)d Surfaces</a></h1>
 
 <p>
 By <a href="mailto:ag@tenfour.ag">Adrian Bauer</a>, August 14, 2012<br />
 <a href="/">Back to portfolio</a>
 </p>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a><br />
+<g:plusone size="medium"></g:plusone><br />
+<div class="fb-like" data-href="http://tenfour.ag/n22d" data-send="false" data-layout="button_count" data-width="90" height="20" data-show-faces="false"></div>
 
 <p>
 Sane, sober humans don't generally claim to perceive more than three spatial
@@ -210,9 +250,12 @@ and <a href="mailto:ag@tenfour.ag">let me know</a> if you find it useful!
 </p>
 
 <div class="shameless-plug">
-<a href="/">Better yet, hire me :)</a>
+<a href="/">Better yet, hire me as a freelancer :)</a>
 </div>
 
-</body>
+<g:plusone size="medium" annotation="inline"></g:plusone>
+<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+<div class="fb-like" data-href="http://tenfour.ag/n22d" data-send="true" data-width="450" data-show-faces="true"></div>
 
+</body>
 </html>
