--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <meta property="fb:admins" content="717600634" />
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="/style.css" rel="stylesheet" type="text/css">
 
 <script type="text/javascript"
   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 <script src="prototype.js"></script>
-<script src="n22d/webgl-utils.js"></script>
-<script src="n22d/webgl-debug.js"></script>
+<script src="webgl-utils.js"></script>
+<script src="webgl-debug.js"></script>
 
 <script src="util.js"></script>
-<script src="n22d/math.js"></script>
-<script src="n22d/gl.js"></script>
-<script src="n22d/422d.js"></script>
-<script src="n22d/shapes.js"></script>
-<script src="n22d/bottle-demo.js"></script>
+<script src="math.js"></script>
+<script src="gl.js"></script>
+<script src="422d.js"></script>
+<script src="shapes.js"></script>
+<script src="bottle-demo.js"></script>
 
 <script type="text/javascript">
     document.observe("dom:loaded", function() {
@@ -133,7 +133,7 @@ I wrote does exactly this.
 
 <div class="img">
 <a href="http://en.wikipedia.org/wiki/File:M%C3%B6bius_strip.jpg">
-<img src="n22d/mobius.jpg" alt="Möbius strip" />
+<img src="mobius.jpg" alt="Möbius strip" />
 </a>
 </div>
 
@@ -169,7 +169,7 @@ angle.
 
 <div class="img">
 <a href="http://en.wikipedia.org/wiki/File:Phong_components_version_4.png">
-<img src="n22d/Phong_components_version_4.png" alt="Ambient, diffuse, and specular lighting" />
+<img src="Phong_components_version_4.png" alt="Ambient, diffuse, and specular lighting" />
 </a>
 </div>
 
