--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     }
     div.img { text-align: center; }
     img { max-width: 100%; }
+    #bottle {
+        max-width:300px;
+        margin-left:auto;
+        margin-right:auto;
+    }
     .shameless-plug {
         text-align: center;
         margin: 1em;
@@ -102,10 +107,6 @@
 By <a href="mailto:ag@tenfour.ag">Adrian Bauer</a>, August 14, 2012<br />
 <a href="/">Back to portfolio</a>
 </p>
-
-<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a><br />
-<g:plusone size="medium"></g:plusone><br />
-<div class="fb-like" data-href="http://tenfour.ag/n22d" data-send="false" data-layout="button_count" data-width="90" height="20" data-show-faces="false"></div>
 
 <p>
 Sane, sober humans don't generally claim to perceive more than three spatial
